--- a/IntroduccionJS/index.html
+++ b/IntroduccionJS/index.html
@@ -14,8 +14,13 @@
         <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
         <p>Introducción a JavaScript</p>
         <p class="hashtag">#DesarrolloWebCompleto</p>
+        <button type="button" id="boton"> ver notificacion</button>
     </div>
-
+    
+    <!-- <script src="js/scripts.js"></script> -->
+    <!-- <script src="js/scripts2.js"></script> -->
+    <!-- <script src="js/scripts3.js"></script> -->
+    <script src="js/scripts4.js"></script>
 
 </body>
 </html>
