Comenzando a estudiar WebComponens

--- a/Ajedrez--by--BrayanG/index.html
+++ b/Ajedrez--by--BrayanG/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Russo+One&display=swap" rel="stylesheet">
+    <script src="/componentes/ChessBoard.js" ></script>
     <title>Chess ♟️</title>
 </head>
 <body>
@@ -19,8 +20,8 @@
         <div class="header__contenedor-2 background_images" >        </div>
          
     </header>
-    <main>
-
+    <main class="contenedor">
+        <chess-board></chess-board>
     </main>
     <footer class="footer">
         <div class="footer__contenedor">
@@ -34,7 +35,7 @@
                 </a>
                 
                 <a href="https://www.linkedin.com/in/brayan-gutierrez-b16048260/" target="_blank" class=links" title="LinkedIn">
-                    <img class="icons" src="/img/icons8-linkedin-500.png" alt="">
+                    <img class="LinKedIn" src="/img/icons8-linkedin-500.png" alt="">
                 </a>
 
                 <a href="https://www.uninorte.edu.co/" target="_blank" class=links" title="Universidad del Norte">
