ya hay movimientos

--- a/Ajedrez--by--BrayanG/index.html
+++ b/Ajedrez--by--BrayanG/index.html
@@ -20,10 +20,12 @@
         <div class="header__contenedor-2 background_images" >        </div>
          
     </header>
-    <main class="contenedor">
-        <chess-board></chess-board>
-        <div>
-            xd
+    <main>
+        <div  class="contenedor">
+            <chess-board></chess-board>
+            <div class="sus">
+                xd
+            </div>
         </div>
     </main>
 
