--- a/Ajedrez--by--BrayanG/pruebas.html
+++ b/Ajedrez--by--BrayanG/pruebas.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Círculo alrededor de una imagen</title>
   <style>
-    .div-con-linea {
-      width: 200px;
-      height: 200px;
+    .image-container {
       position: relative;
-      background-color: lightgray;
+      display: inline-block;
     }
 
-    .linea-negra {
+    .circle {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      border-top: 2px solid black; /* Línea negra de 2px de ancho */
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border: 2px solid red; /* Puedes cambiar el color del borde */
+      border-radius: 50%;
+      box-sizing: border-box;
+      width: 80%; /* Puedes ajustar el tamaño del círculo */
+      height: 80%;
     }
   </style>
 </head>
 <body>
-
-  <div class="div-con-linea">
-    <div class="linea-negra"></div>
-    <!-- Contenido del div -->
+  <div class="image-container">
+    <img src="tu_imagen.jpg" alt="Imagen" width="300"> <!-- Ajusta el ancho de la imagen según sea necesario -->
+    <div class="circle"></div>
   </div>
-
 </body>
 </html>
